# TimelineFinder

./: CMakeLists.txt  Pathes.h  README.md  filemodel.cpp  filemodel.h  main.cpp  outlinewebview.cpp  outlinewebview.h  parseandread.cpp  parseandread.h  pointsmodel.cpp  pointsmodel.h  pointsview.cpp  pointsview.h  readfiles.cpp  readfiles.h  textmodel.cpp  textmodel.h  treeitem.cpp  treeitem.h  treeitemcache.cpp  treeitemcache.h
